--- a/pom.xml
+++ b/pom.xml
@@ -92,7 +92,12 @@
 			</exclusions>
 		</dependency>
 	</dependencies>
-
+	  <repositories>
+        <repository>
+            <id>central</id>
+            <url>https://repo.maven.apache.org/maven2/</url>
+        </repository>
+    </repositories>
 	<build>
 		<plugins>
 			<plugin>
